<resources>
    <string name="app_name">Collaborative Authentication</string>
    <string name="button_dkg_main_start">Start Distributed Key Generation</string>
    <string name="menu_listener_main_stop">  Disconnect from authentication Service</string>
    <string name="menu_listener_main_start"> Connect to authentication Service</string>
    <string name="menu_enable_bluetooth"> Enable bluetooth</string>
    <string name="title_activity_distributed_key_generation">DistributedKeyGenerationActivity
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="scrollviewSelected">Selected Devices</string>
    <string name="scrollViewPaired">Paired Devices</string>
    <string name="ok">Submit</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_cancelled_fragment">The distributed key generation process was cancelled.
        There are no new keys  added to the system</string>
    <string name="notificationText">\"Authentication service available</string>
    <string name="startNotificationText">Bluetooth is available again.</string>
    <string name="pauseNotificationText">Bluetooth is not available.</string>
    <string name="textweight">Weights for each device</string>

    <string name="errornot"> Error occurred. Authentication service stopped.</string>

    <string-array name="possible_weigths">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="errornotnostop">Error occurred. Authentication service still active</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefillLogin">Login</string>
    <string name="go">Go</string>
    <string name="cancel">cancel</string>
    <string name="bt_new">New</string>
    <string name="resume">resume</string>
    <string name="clear">clear</string>

</resources>