<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.collaborativeauthentication.android.MainActivity">
    <item
        android:id="@+id/listener_start"
        android:orderInCategory="100"
        android:title="@string/menu_listener_main_start"
        app:showAsAction="never" />
    <item
        android:id="@+id/listener_stop"
        android:orderInCategory="100"
        android:title="@string/menu_listener_main_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/enable_bluetooth"
        android:orderInCategory="100"
        android:title="@string/menu_enable_bluetooth"
        app:showAsAction="never" />
</menu>