<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.ui.SelectDevicesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_paireddev"
        android:layout_width="273dp"
        android:layout_height="173dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPD" />

    <TextView
        android:id="@+id/textViewSD"
        android:layout_width="198dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:text="@string/scrollviewSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycleview_paireddev" />

    <TextView
        android:id="@+id/textViewPD"
        android:layout_width="198dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:text="@string/scrollViewPaired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_sel"
        android:layout_width="269dp"
        android:layout_height="170dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSD" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="116dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_sel" />
</androidx.constraintlayout.widget.ConstraintLayout>